--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,8 +4,25 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Lobster', cursive;
 }
 
+.navbar {
+  background-color: #ad1d28;
+  border-color: #911821;
+}
+
 .navbar-brand {
   font-family: 'Lobster', cursive;
+}
+
+.banner {
+  margin-top: 4em;
+}
+
+h1 small {
+  color: #aaa;
+}
+
+.list-group-item-clear {
+  background-color: transparent;
 }
 
 legend {
