Finalise homepage listing view

--- a/app_server/views/locations-list.pug
+++ b/app_server/views/locations-list.pug
@@ -7,11 +7,10 @@ block content
         small &nbsp;Find places to work with wifi near you!
   .row
     .col-12.col-md-8
-      p test 1
-      p test 2
-      .row.list-group
-        .col-12.list-group-item.flex-column.align-items-start.list-group-item-clear
-          h4.d-flex.w-100.justify-content-between
+      .row.mb-4
+
+        .col-12.mb-1.listing-item
+          h4
             a(href="/location") Starcups
             small &nbsp;
               i.fa.fa-star
@@ -19,12 +18,43 @@ block content
               i.fa.fa-star
               i.fa.fa-star-o
               i.fa.fa-star-o
-            span.badge.badge-pill.float-right.badge-default 100m
+            span.badge.badge-pill.badge-default.float-right 100m
           p.address 125 High Street, Reading, RG6 1PS
-          p Test paragraph
-          p
+          p.facilities
             span.badge.badge-warning Hot drinks
             span.badge.badge-warning Food
             span.badge.badge-warning Premium wifi
+
+        .col-12.mb-1.listing-item
+          h4
+            a(href="/location") Cafe Hero
+            small &nbsp;
+              i.fa.fa-star
+              i.fa.fa-star
+              i.fa.fa-star-o
+              i.fa.fa-star-o
+              i.fa.fa-star-o
+            span.badge.badge-pill.badge-default.float-right 200m
+          p.address 125 High Street, Reading, RG6 1PS
+          p.facilities
+            span.badge.badge-warning Hot drinks
+            span.badge.badge-warning Food
+            span.badge.badge-warning Premium wifi
+
+        .col-12.mb-1.listing-item
+          h4
+            a(href="/location") Burger Queen
+            small &nbsp;
+              i.fa.fa-star
+              i.fa.fa-star
+              i.fa.fa-star
+              i.fa.fa-star
+              i.fa.fa-star
+            span.badge.badge-pill.badge-default.float-right 500m
+          p.address 125 High Street, Reading, RG6 1PS
+          p.facilities
+            span.badge.badge-warning Food
+            span.badge.badge-warning Premium wifi
+
     .col-12.col-md-4
-      p.lead Loc8r helps you find places to work when out and about.
+      p.lead Looking for wifi and a seat? Loc8r helps you find places to work when out and about. Perhaps with coffee, cake or a pint? Let Loc8r help you find the place you're looking for.
