Update homepage list to use Bootstrap cards

--- a/app_server/views/locations-list.pug
+++ b/app_server/views/locations-list.pug
@@ -7,9 +7,9 @@ block content
         small &nbsp;Find places to work with wifi near you!
   .row
     .col-12.col-md-8
-      .row.mb-4
 
-        .col-12.mb-1.listing-item
+      .card
+        .card-block
           h4
             a(href="/location") Starcups
             small &nbsp;
@@ -20,12 +20,13 @@ block content
               i.fa.fa-star-o
             span.badge.badge-pill.badge-default.float-right 100m
           p.address 125 High Street, Reading, RG6 1PS
-          p.facilities
+          .facilities
             span.badge.badge-warning Hot drinks
             span.badge.badge-warning Food
             span.badge.badge-warning Premium wifi
 
-        .col-12.mb-1.listing-item
+      .card
+        .card-block
           h4
             a(href="/location") Cafe Hero
             small &nbsp;
@@ -36,12 +37,13 @@ block content
               i.fa.fa-star-o
             span.badge.badge-pill.badge-default.float-right 200m
           p.address 125 High Street, Reading, RG6 1PS
-          p.facilities
+          .facilities
             span.badge.badge-warning Hot drinks
             span.badge.badge-warning Food
             span.badge.badge-warning Premium wifi
 
-        .col-12.mb-1.listing-item
+      .card
+        .card-block
           h4
             a(href="/location") Burger Queen
             small &nbsp;
@@ -52,7 +54,7 @@ block content
               i.fa.fa-star
             span.badge.badge-pill.badge-default.float-right 500m
           p.address 125 High Street, Reading, RG6 1PS
-          p.facilities
+          .facilities
             span.badge.badge-warning Food
             span.badge.badge-warning Premium wifi
 
