--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -34,7 +34,25 @@ h1 small {
   background-color: #469ea8;
 }
 
-.badge-default {
+.card-primary {
+  border-color: #a2ced3;
+  margin-bottom: 1rem;
+}
+
+.review-header {
+  background-color: #31727a;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+  margin-bottom: 0.5em;
+}
+
+.review {
+  margin-right: -20px;
+  margin-left: -20px;
+  margin-bottom: 1em;
+}
+
+.badge-default, .btn-primary {
   background-color: #ad1d28;
   border-color: #911821;
 }
