Getting started with Ch7 code

--- a/app_server/views/locations-list.pug
+++ b/app_server/views/locations-list.pug
@@ -9,7 +9,8 @@ block content
         small &nbsp;#{pageHeader.strapline}
   .row
     .col-12.col-md-8
-
+      .error= message
+      
       each location in locations
         .card
           .card-block
