Connecting all pages for chapter 7

--- a/app_server/views/_includes/sharedHTMLfunctions.pug
+++ b/app_server/views/_includes/sharedHTMLfunctions.pug
@@ -3,3 +3,12 @@ mixin outputRating(rating)
     i.fa.fa-star
   - for (let i = rating; i < 5; i++)
     i.fa.fa-star-o
+
+mixin formatDate(dateString)
+  -const date = new Date(dateString);
+  -const monthNames = [ 'January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December' ];
+  -const d = date.getDate();
+  -const m = monthNames[date.getMonth()];
+  -const y = date.getFullYear();
+  -const output = `${d} ${m} ${y}`;
+  =output
