--- a/app_server/views/locations-list.pug
+++ b/app_server/views/locations-list.pug
@@ -15,7 +15,7 @@ block content
         .card
           .card-block
             h4
-              a(href="/location")= location.name
+              a(href=`/location/${location._id}`)= location.name
               small &nbsp;
                 +outputRating(location.rating)
               span.badge.badge-pill.badge-default.float-right= location.distance
