--- a/app_server/views/location-info.pug
+++ b/app_server/views/location-info.pug
@@ -40,7 +40,8 @@ block content
         .col-12
           .card.card-primary.review-card
             .card-block
-              a.btn.btn-primary.float-right(href='/location/review/new') Add review
+              a.btn.btn-primary.float-right(href=`/location/${location._id}/review/new`)
+                | Add review
               h2.card-title Customer reviews
               each review in location.reviews
                 .row.review
@@ -48,7 +49,8 @@ block content
                     span.rating
                       +outputRating(review.rating)
                     span.reviewAuthor #{review.author}
-                    small.reviewTimestamp #{review.timestamp}
+                    small.reviewTimestamp
+                      +formatDate(review.createdOn)
                   .col-12
                     p !{(review.reviewText).replace(/\n/g, '<br/>')}
     .col-12.col-lg-3
