--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -25,3 +25,4 @@ html
     script(src='https://code.jquery.com/jquery-3.1.1.slim.min.js')
     script(src='https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js')
     script(src='/javascripts/bootstrap.min.js')
+    script(src='/javascripts/validation.js')
