Creating homelist component with hardcoded data

--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -26,3 +26,4 @@ html
     script(src='https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js')
     script(src='/javascripts/bootstrap.min.js')
     script(src='/javascripts/validation.js')
+    script(src='/inline.bundle.js')
