Switch to_id, built and add to Express

--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -26,3 +26,5 @@ html
     script(src='https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js')
     script(src='/javascripts/bootstrap.min.js')
     script(src='/javascripts/validation.js')
+    
+    block scripts
