--- a/app_public/src/app/home-list/home-list.component.html
+++ b/app_public/src/app/home-list/home-list.component.html
@@ -1,7 +1,7 @@
 <div class="card" *ngFor="let location of locations">
   <div class="card-block">
     <h4>
-      <a href="/location/{{location.id}}">{{location.name}}</a>
+      <a href="/location/{{location._id}}">{{location.name}}</a>
       <small>&nbsp;
         <app-rating-stars [thisRating]="location.rating"></app-rating-stars>
       </small>
