A few tweaks and the angular app build

--- a/app_server/views/locations-list.pug
+++ b/app_server/views/locations-list.pug
@@ -30,7 +30,7 @@ block content
       p.lead= sidebar
 
 block scripts
-  script(src='/dist/inline.fc11966ed42f88618ebc.bundle.js')
-  script(src='/dist/polyfills.682313b6b06f69a5089e.bundle.js')
-  script(src='/dist/vendor.b5827d44ee5b8956cc5e.bundle.js')
-  script(src='/dist/main.2c71469d183963d9972e.bundle.js')
+  script(src='/build/inline.f0178fcd0cc34a5688b1.bundle.js')
+  script(src='/build/polyfills.682313b6b06f69a5089e.bundle.js')
+  script(src='/build/vendor.b5827d44ee5b8956cc5e.bundle.js')
+  script(src='/build/main.ad6de91d9e2170cae9d4.bundle.js')
