Create reusable page header component

--- a/app_public/src/app/homepage/homepage.component.html
+++ b/app_public/src/app/homepage/homepage.component.html
@@ -1,10 +1,4 @@
-<div class="row banner">
-  <div class="col-12">
-    <h1>Loc8r
-      <small>Find places to work with wifi near you!</small>
-    </h1>
-  </div>
-</div>
+<app-page-header [content]="pageContent.header"></app-page-header>
 <div class="row">
   <div class="col-12 col-md-8">
     <div class="error"></div>
