Add reusable sidebar component

--- a/app_public/src/app/homepage/homepage.component.html
+++ b/app_public/src/app/homepage/homepage.component.html
@@ -4,7 +4,5 @@
     <div class="error"></div>
     <app-home-list>Loading...</app-home-list>
   </div>
-  <div class="col-12 col-md-4">
-    <p class="lead">Looking for wifi and a seat? Loc8r helps you find places to work when out and about. Perhaps with coffee, cake or a pint? Let Loc8r help you find the place you\'re looking for.</p>
-  </div>
+  <app-sidebar class="col-12 col-md-4" [content]="pageContent.sidebar"></app-sidebar>
 </div>
