--- a/app_public/src/app/framework/framework.component.html
+++ b/app_public/src/app/framework/framework.component.html
@@ -6,7 +6,9 @@
     <a routerLink="/" class="navbar-brand">Loc8r</a>
     <div id="navbarMain" class="navbar-collapse collapse">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item"><a routerLink="/about/" class="nav-link">About </a></li>
+        <li class="nav-item" routerLinkActive="active">
+          <a routerLink="/about/" class="nav-link">About </a>
+        </li>
       </ul>
     </div>
   </div>
