A bit of tidying

--- a/app_public/src/app/framework/framework.component.html
+++ b/app_public/src/app/framework/framework.component.html
@@ -3,11 +3,11 @@
     <button type="button" data-toggle="collapse" data-target="#navbarMain" class="navbar-toggler navbar-toggler-right">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <a routerLink="/" class="navbar-brand">Loc8r</a>
+    <a routerLink="" class="navbar-brand">Loc8r</a>
     <div id="navbarMain" class="navbar-collapse collapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item" routerLinkActive="active">
-          <a routerLink="/about/" class="nav-link">About </a>
+          <a routerLink="about" class="nav-link">About </a>
         </li>
       </ul>
     </div>
